Fix Documentation overflow on menu links (#134)
* Fix Documentation overflow on menu links

--- a/src/website/content/css/style.css
+++ b/src/website/content/css/style.css
@@ -188,3 +188,9 @@ a > code {
   filter: none;
   -webkit-filter: none;
 }
+
+.menu-list a {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
